test/tests/stages/18_structures/invalid_parse/extra_credit/union_decl_extra_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
